trunk/Archive2/4c/36bffea201a351/output
main.cpp:1:2: error: invalid preprocessing directive
#includ e<iostream>
 ^
main.cpp:6:12: error: use of undeclared identifier 'std'
    while (std::cin >> value)
           ^
main.cpp:8:5: error: use of undeclared identifier 'std'
    std::cout << "Sum is: " << sum << std::endl; // this doesn't do anything
    ^
main.cpp:8:39: error: use of undeclared identifier 'std'
    std::cout << "Sum is: " << sum << std::endl; // this doesn't do anything
                                      ^
main.cpp:9:5: error: use of undeclared identifier 'std'
    std::cin.ignore().get();
    ^
5 errors generated.
