trunk/Archive2/4c/36bffea201a351/main.cpp
#includ e<iostream>

int main()
{
    int sum = 0, value = 0;
    while (std::cin >> value)
        sum += value;
    std::cout << "Sum is: " << sum << std::endl; // this doesn't do anything
    std::cin.ignore().get();
    return 0;
}